[metadata]
name = flask-bind
version = 0.1
description = "Binding contracts for Flask's routing system"
long_description = file: README.md
long_description_content_type = text/markdown
author = Bruno Lange
author_email = blangeram@gmail.com
url = https://github.com/brunolange/flask-bind
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    flask
    pydantic

[options.packages.find]
exclude =
    test*
